tests/build/cases/property/child_type_constrains_ui_node.stderr
error[E0308]: mismatched types
 --> cases/property/child_type_constrains_ui_node.rs:4:29
  |
4 | pub fn invalid_child(child: NilUiNode, input: bool) -> impl UiNode {
  |                             ^^^^^^^^^ expected struct `NilUiNode`, found type parameter `impl zero_ui::core::UiNode`
  |
  = note:      expected struct `NilUiNode`
          found type parameter `impl zero_ui::core::UiNode`
